--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </a>
     </li>
     <li>
-      <a href="">
+      <a href="https://wa.me/5534998816952">
         <img src="img/whatsapp.png" alt="Whatsapp">
       </a>
     </li>
