--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
   <ul class="links-list">
     <li>
-      <a href="" class="active">
+      <a href="https://clenio77.github.io/" class="active">
         Minha Home Page de Projetos
         <span>Projetos que já construi até hoje.</span>
       </a>
