--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-LH0NCLG7WM"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JZGSWD552K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    gtag('config', 'G-LH0NCLG7WM');
-  </script>
+  gtag('config', 'G-JZGSWD552K');
+</script>
 </head>
 <body>
   
