--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Raleway&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-JZGSWD552K"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
@@ -29,8 +29,8 @@
 
   <ul class="social">
     <li>
-      <a href="">
-        <img src="img/youtube.png" alt="Youtube">
+      <a href="https://twitter.com/clenioafonso">
+        <img src="img/twitter-redondo.png" alt="Twitter">
       </a>
     </li>
     <li>
