update index - update link twitter
foi feito o update do link do twitter

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <ul class="social">
     <li>
-      <a href="https://twitter.com/clenioafonso">
+      <a href="https://twitter.com/clenioafonso/">
         <img src="img/twitter-redondo.png" alt="Twitter">
       </a>
     </li>
