--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <ul class="social">
     <li>
       <a href="https://twitter.com/clenioafonso/">
-        <img src="img/twitter-redondo.png" alt="Twitter">
+        <img src="img/twitter.png" alt="Twitter">
       </a>
     </li>
     <li>
